# blooto

./: .gitignore  CMakeLists.txt  README.md  bitboard.hpp  blooto.kdev4  square.hpp
blooto/: bishoptype.hpp  bitboard.hpp  bitscan.hpp  board.hpp  colour.hpp  kingtype.hpp  knighttype.hpp  magicmoves.hpp  move.hpp  pawntype.hpp  piece.hpp  piecetype.hpp  queentype.hpp  rooktype.hpp  slidertype.hpp  solution.hpp  square.hpp  stipulation.hpp
doc/: CMakeLists.txt  Doxyfile.in  blooto.txt
lib/: CMakeLists.txt  bitscan.cpp  board.cpp  kingtype.cpp  knighttype.cpp  magicmoves.cpp  piece.cpp
tests/: CMakeLists.txt  test_bitboard.cpp  test_bitscan.cpp  test_board.cpp  test_colour.cpp  test_magicmoves.cpp  test_move.cpp  test_piece.cpp  test_piecetype.cpp  test_square.cpp  test_stipulation.cpp
utils/: CMakeLists.txt  blooto.cpp
