find_package(Boost 1.47.0 COMPONENTS unit_test_framework REQUIRED)
set(TESTS test_bitscan test_square test_bitboard test_magicmoves test_piecetype
          test_colour test_piece)
include_directories(${blooto_SOURCE_DIR} ${Boost_INCLUDE_DIRS})
link_directories(${blooto_BINARY_DIR})
foreach(test ${TESTS})
  add_executable(${test} ${test}.cpp)
  target_link_libraries(${test} blooto ${Boost_LIBRARIES})
  add_test(${test} ${test})
endforeach(test)
